- Re-add separate header buttons - Fix some samples - Position resize handle better - Always put sort/filter indicators behind header text - Add comments to public methods

--- a/src/Core/Components/DataGrid/FluentDataGrid.razor.css
+++ b/src/Core/Components/DataGrid/FluentDataGrid.razor.css
@@ -62,10 +62,10 @@ tbody
 
 ::deep .resize-handle {
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0;
     bottom: 0;
-    height: 34px;
+    height: 32px;
     cursor: col-resize;
     margin-left: calc(var(--design-unit) * 2px);
     width: calc(var(--design-unit) * 1px + 2px);
